# avito-search-reranker

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb  features.ipynb  l1-ranking.ipynb  train_lgbm.ipynb
scripts/: cluster.py
src/: features.py
