[project]
name = "avito-for-applicant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.8.0",
    "catboost>=1.2.8",
    "dask[distributed]>=2025.9.1",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy<=2.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "ydata-profiling[notebook]>=4.16.1",
]
